// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HintButton rendering renders Daily light 1`] = `
<div
  className="undefined"
>
  <div
    aria-live="passive"
    className="undefined"
  />
  <button
    aria-haspopup={null}
    aria-label="Get a Hint"
    className="HintButton__btn"
    disabled={false}
    id="test"
    onClick={[Function]}
  />
</div>
`;

exports[`HintButton rendering renders HintButton dark 1`] = `
<div
  className="undefined"
>
  <div
    aria-live="passive"
    className="undefined"
  />
  <button
    aria-haspopup={null}
    aria-label="Get a Hint"
    className="HintButton__btn"
    disabled={false}
    id="test"
    onClick={[Function]}
  />
</div>
`;

exports[`HintButton rendering renders HintButton light 1`] = `
<div
  className="undefined"
>
  <div
    aria-live="passive"
    className="undefined"
  />
  <button
    aria-haspopup={null}
    aria-label="Get a Hint"
    className="HintButton__btn"
    disabled={false}
    id="test"
    onClick={[Function]}
  />
</div>
`;

exports[`HintButton rendering renders expanded HintButton 1`] = `
<div
  className="undefined HintButton--expanded"
>
  <div
    aria-live="passive"
    className="undefined HintButton__content--expanded"
  />
  <button
    aria-expanded={true}
    aria-haspopup={null}
    aria-label="Close Hint"
    className="HintButton__btn HintButton__btn--expanded"
    disabled={false}
    id="test"
    onClick={[Function]}
  >
    Close Hint
  </button>
</div>
`;

exports[`HintButton rendering renders expected elements 1`] = `
<div
  className="undefined"
>
  <div
    aria-live="passive"
    className="undefined"
  />
  <button
    aria-haspopup={null}
    aria-label="Get a Hint"
    className="HintButton__btn"
    disabled={false}
    id="test"
    onClick={[Function]}
  />
</div>
`;
